# librecoop-rbdoom3bfg

./: .gitignore  LICENSE_EXCEPTIONS.md  README.md  RELEASE-NOTES.md
base/: devtools.cfg  extract_resources.cfg
base/_tb/fgd/: DOOM-3-all-and-models.fgd  DOOM-3-all.fgd  DOOM-3-multiplayer.fgd  DOOM-3-slim-and-models.fgd  DOOM-3-slim.fgd
base/def/: misc.def
base/materials/: invisible.mtr
doomclassic/doom/: d_ticcmd.h
neo/: CMakeLists.txt  astyle-code.bat  cmake-linux-debug.sh  cmake-linux-release.sh  cmake-linux-retail.sh  cmake-vs2019-32bit-windows10.bat  cmake-vs2019-openal.bat  cmake-vs2019-win64-retail.bat  cmake-vs2022-arm64.bat  cmake-vs2022-win64-retail.bat  cmake-xcode-debug.sh  cmake-xcode-release.sh  cmake-xcode-universal.sh  compileshaders.cmake  idStuff.natvis
neo/cm/: CollisionModel.h  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h
neo/d3xp/: AFEntity.cpp  Achievements.cpp  Actor.cpp  Actor.h  BrittleFracture.cpp  Camera.cpp  Camera.h  Entity.cpp  Entity.h  EnvironmentProbe.cpp  Fx.cpp  Game.h  Game_local.cpp  Game_local.h  Game_network.cpp  Item.cpp  Item.h  Leaderboards.cpp  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.cpp  Projectile.cpp  Projectile.h  Pvs.cpp  Sound.cpp  Target.cpp  Target.h  Trigger.cpp  Trigger.h  Weapon.cpp  (+3 more)
neo/d3xp/ai/: AI.cpp  AI.h  AI_events.cpp
neo/d3xp/anim/: Anim.cpp  Anim_Blend.cpp
neo/d3xp/gamesys/: Class.cpp  Class.h  SaveGame.cpp  SysCmds.cpp  SysCmds.h  SysCvar.cpp  SysCvar.h
neo/d3xp/menus/: MenuHandler.h  MenuHandler_Shell.cpp  MenuScreen.h  MenuScreen_Shell_GameOptions.cpp  MenuScreen_Shell_ModeSelect.cpp  MenuScreen_Shell_PressStart.cpp  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Settings.cpp  MenuScreen_Shell_Stereoscopics.cpp  MenuScreen_Shell_SystemOptions.cpp
neo/d3xp/physics/: Clip.cpp  Physics_AF.cpp  Physics_Parametric.cpp  Physics_Parametric.h  Physics_Player.cpp  Physics_RigidBody.cpp
neo/d3xp/script/: Script_Interpreter.cpp  Script_Program.cpp  Script_Thread.cpp  Script_Thread.h
neo/framework/: CVarSystem.cpp  CVarSystem.h  CmdSystem.h  Common.cpp  Common.h  Common_dialog.cpp  Common_load.cpp  Common_local.h  Common_mapconvert.cpp  Common_network.cpp  Common_printf.cpp  Console.cpp  DeclEntityDef.cpp  DeclManager.cpp  DeclManager.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  File_Resource.cpp  File_Resource.h  File_Zip.cpp  File_Zip.h  Licensee.h  Zip.h  common_frame.cpp
neo/idlib/: CMakeLists.txt  DataQueue.h  Lib.cpp  MapFile.cpp  MapFile.h  MapFile_gltf.cpp  ParallelJobList.h  Str.cpp  Str.h  gltfParser.cpp  precompiled.h
neo/idlib/sys/: sys_alloc_tags.h  sys_defines.h
neo/imgui/: BFGimgui.h  BFGimguiImpl.cpp  ImGui_Hooks.h
neo/libs/imtui/: imtui-demo.cpp  imtui-demo.h  imtui-impl-ncurses.cpp  imtui-impl-ncurses.h  imtui-impl-text.cpp  imtui-impl-text.h  imtui.h
neo/libs/imtui/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
neo/libs/imtui/pdcurses/: curses.h  curspriv.h  panel.h
neo/libs/libbinkdec/src/: BinkDecoder.cpp  BinkVideo.cpp
neo/libs/moc/: CMakeLists.txt  CompilerSpecific.inl  CullingThreadpool.cpp  CullingThreadpool.h  MaskedOcclusionCulling.cpp  MaskedOcclusionCulling.h  MaskedOcclusionCullingAVX2.cpp  MaskedOcclusionCullingAVX512.cpp  MaskedOcclusionCullingCommon.inl
neo/libs/optick/: optick.h  optick_common.h  optick_core.cpp  optick_gpu.vulkan.cpp
neo/libs/stb/: stb_image.h  stb_image_write.h
neo/libs/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
neo/libs/zlib/minizip/: ioapi.c  ioapi.h  unzip.cpp  unzip.h  zip.cpp  zip.h
neo/renderer/: BinaryImage.cpp  Cinematic.cpp  CmdlineProgressbar.cpp  CullingThreadpool.cpp  Font.h  GLMatrix.cpp  Image.h  ImageManager.cpp  Image_files.cpp  Image_load.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  Model_gltf.cpp  Model_local.h  PipelineCache.cpp  RenderBackend.cpp  RenderCommon.h  RenderPass.cpp  RenderProgs.cpp  RenderProgs.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld.h  RenderWorld_defs.cpp  RenderWorld_envprobes.cpp  RenderWorld_lightgrid.cpp  RenderWorld_portals.cpp  VertexCache.h  tr_frontend_addlights.cpp  tr_frontend_addmodels.cpp  tr_frontend_main.cpp  tr_frontend_masked_occlusion_culling.cpp  tr_trisurf.cpp
neo/renderer/DXT/: DXTEncoder.cpp  DXTEncoder_SSE2.cpp
neo/renderer/NVRHI/: BufferObject_NVRHI.cpp  Image_NVRHI.cpp  RenderBackend_NVRHI.cpp  RenderDebug_NVRHI.cpp
neo/renderer/OpenGL/: RenderBackend_GL.cpp
neo/renderer/Passes/: SsaoPass.cpp
neo/shaders/: colorProcess.ps.hlsl  colorProcess.vs.hlsl  global_inc.hlsl  shaders.cfg
neo/shaders/builtin/: color.vs.hlsl  depth.vs.hlsl  gbuffer.ps.hlsl  gbuffer.vs.hlsl  texture.vs.hlsl  texture_color.ps.hlsl  texture_color.vs.hlsl  texture_color_texgen.vs.hlsl  vertex_color.vs.hlsl
neo/shaders/builtin/SSAO/: AmbientOcclusion_AO.ps.hlsl  ssao_compute.cs.hlsl
neo/sound/: WaveFile.cpp  WaveFile.h
neo/sound/OpenAL/: AL_SoundSample.cpp
neo/sound/XAudio2/: XA2_SoundSample.cpp
neo/stub/: EngineStub.cpp  EngineStubPosix.cpp  Image_stub.cpp
neo/swf/: SWF.h  SWF_Image.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_Render.cpp  SWF_SpriteInstance.cpp  SWF_Sprites.cpp
neo/sys/: DeviceManager_DX12.cpp  DeviceManager_VK.cpp  sys_session.h  sys_session_local.cpp  sys_session_local.h
neo/sys/common/: session_local.cpp
neo/tools/compilers/: CMakeLists.txt  compiler_public.h  main.cpp  main_posix.cpp  precompiled.h
neo/tools/compilers/aas/: AASBuild.cpp  AASReach.cpp
neo/tools/compilers/dmap/: dmap.cpp  dmap.h  facebsp.cpp  map.cpp  optimize.cpp  portals.cpp  renderlight.cpp  tritjunction.cpp  ubrush.cpp  usurface.cpp
neo/ui/: UserInterface.cpp
(+81 files in other folders)
